force-app/main/default/objects/ChessPiece__c/ChessPiece__c.object-meta.xml
<CustomObject>
    <label>ChessPiece</label>
    <nameField>
        <displayFormat>CP{0}</displayFormat>
        <label>ChessPiece Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ChessPieces</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>