force-app/main/default/objects/ChessPiece__c/fields/ChessBoard__c.field-meta.xml
<CustomField>
    <fullName>ChessBoard__c</fullName>
    <label>ChessBoard</label>
    <referenceTo>ChessBoard__c</referenceTo>
    <relationshipLabel>ChessPieces</relationshipLabel>
    <relationshipName>ChessPieces</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>