force-app/main/default/objects/ChessPiece__c/fields/En_Passant_Turn__c.field-meta.xml
<CustomField>
    <fullName>En_Passant_Turn__c</fullName>
    <label>En Passant Turn</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>