force-app/main/default/objects/ChessPiece__c/fields/Has_moved__c.field-meta.xml
<CustomField>
    <fullName>Has_moved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has moved</label>
    <type>Checkbox</type>
</CustomField>