force-app/main/default/objects/ChessPiece__c/fields/Piece_Color__c.field-meta.xml
<CustomField>
    <fullName>Piece_Color__c</fullName>
    <label>Piece Color</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>White</fullName>
            </value>
            <value>
                <fullName>Black</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>