force-app/main/default/objects/ChessPiece__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pawn</fullName>
            </value>
            <value>
                <fullName>Knight</fullName>
            </value>
            <value>
                <fullName>Bishop</fullName>
            </value>
            <value>
                <fullName>Rook</fullName>
            </value>
            <value>
                <fullName>Queen</fullName>
            </value>
            <value>
                <fullName>King</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>