force-app/main/default/objects/ChessPiece__c/fields/X_Coord__c.field-meta.xml
<CustomField>
    <fullName>X_Coord__c</fullName>
    <label>X-Coord</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>